# Defect_Detection

./: .gitignore  CMakeLists.txt  README.md  main.cpp  miniproject_opencv_demo.md
include/: BlobDetector.h  DetectionStrategy.h  EdgeDefectDetector.h  ImageProcessor.h  Inspector.h
src/: BlobDetector.cpp  DetectionStrategy.cpp  EdgeDefectDetector.cpp  ImageProcessor.cpp  Inspector.cpp
